fix: return IN_PROGRESS for incomplete snapshots for defined time range
- added incompleteCheckTimeoutInSeconds property
- added method to check if a given end time means the snapshotting process is timed out
- added check to see if snapshot is timed out and returns INCOMPLETE only if that is the case

# Conflicts:
#	operate/common/src/main/java/io/camunda/operate/property/BackupProperties.java